--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         
         <div class="jumbotron">
-            <h1>Infinite Shibes</h1>
+            <h1>Shiba Infinite</h1>
         </div>
 
         <div id="shibes">
@@ -51,7 +51,9 @@
             </div>
         </div>
 
-        <p id="loading">Loading shibes... please be patient!</p>
+        <div class="alert alert-info" id="loading">
+            Loading shibes... please be patient!
+        </div>
 
     </div>
 
